--- a/style/master/main.css
+++ b/style/master/main.css
@@ -902,6 +902,7 @@ textarea {
     margin: 0;
     text-align: left;
     margin-bottom: 5px;
+    text-transform: capitalize;
 }
 
 #skills .skills-parent .parent-bar .wrapper .skill:before {
