--- a/style/master/main.css
+++ b/style/master/main.css
@@ -817,6 +817,9 @@ textarea {
     font-size: 13px;
     margin-left: 5px;
 }
+.skills-parent {
+    padding-inline: 15px;
+}
 
 /*========================== Skills Programming ==================================*/
 
